# ACrossPlatformCppLibrary

./: .gitignore  .travis.yml  CMakeLists.txt  build_powershell.ps1  export.h  main.cpp
.circleci/: config.yml
install/lib/pkgconfig/: gtest_main.pc
src/: Adder.cpp  Adder.h  CMakeLists.txt  export.h
test/: CMakeLists.txt  test_add.cpp
